src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global Key Account</fullName>
                </value>
                <value>
                    <fullName>Global Account</fullName>
                </value>
                <value>
                    <fullName>Regional Key Account</fullName>
                </value>
                <value>
                    <fullName>Regional Account</fullName>
                </value>
                <value>
                    <fullName>Local Key Account</fullName>
                </value>
                <value>
                    <fullName>Local Account</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>SME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Pardot</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU_Identifier__c</fullName>
        <formula>IF( CONTAINS(Owner.UserRole.Name, &apos;Cocoa&apos;) , &apos;Cocoa&apos;, 
IF( CONTAINS(Owner.UserRole.Name, &apos;Dairy&apos;) , &apos;Dairy&apos;, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country_Code__c</fullName>
        <formula>Text (BillingCountryCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Channel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cocoa_Active_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>First Closing Win Opportunity Date</inlineHelpText>
        <label>Cocoa Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cocoa_BD_Status__c</fullName>
        <label>Cocoa BD Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approached</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cocoa_First_Deal_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cocoa First Deal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cocoa_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cocoa Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cocoa_Primary_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cocoa Primary Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cocoa_Total_Won_Volume__c</fullName>
        <description>Sum of total volumes with opportunities = Closed Won and Business Unit = Cocoa</description>
        <label>Cocoa Total Won Volume</label>
        <summarizedField>Opportunity.Volume__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Business_Unit__c</field>
            <operation>equals</operation>
            <value>Cocoa</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closing Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cocoa_Won_Amount__c</fullName>
        <description>sum of total amount with opportunities = Closed won and Business unit = Cocoa</description>
        <label>Cocoa Won Amount</label>
        <summarizedField>Opportunity.Total_Offer__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closing Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Business_Unit__c</field>
            <operation>equals</operation>
            <value>Cocoa</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Commercialised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercialised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_Cocoa_Opportunities__c</fullName>
        <description>Count of Total number of open opportunities and BU = Cocoa</description>
        <label>Count of Open Cocoa Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Business_Unit__c</field>
            <operation>equals</operation>
            <value>Cocoa</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Dairy_Opportunities__c</fullName>
        <description>Count of total number of open opportunities and BU = Dairy</description>
        <label>Count of Dairy Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Business_Unit__c</field>
            <operation>equals</operation>
            <value>Dairy</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Edible_Nuts_Opportunity__c</fullName>
        <label>Count of Edible Nuts Opportunity</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Business_Unit__c</field>
            <operation>equals</operation>
            <value>Edible_Nuts</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Spice_Opportunity__c</fullName>
        <label>Count of Spice Opportunity</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Business_Unit__c</field>
            <operation>equals</operation>
            <value>Spice</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dairy_Active_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>First Closing Win Opportunity Date</inlineHelpText>
        <label>Dairy Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dairy_BD_Status__c</fullName>
        <label>Dairy BD Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approached</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dairy_Owner_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dairy Owner Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dairy_Primary_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dairy Primary Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dairy_Total_Won_Volume__c</fullName>
        <description>Sum of total volume with opportunities = Closed Won and Business Unit = Dairy</description>
        <label>Dairy Total Won Volume</label>
        <summarizedField>Opportunity.Volume__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closing Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Business_Unit__c</field>
            <operation>equals</operation>
            <value>Dairy</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Data_Upload_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Data Upload Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Uploaded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edible_Nuts_Active_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>First Closing Win Opportunity Date</inlineHelpText>
        <label>Edible Nuts Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Edible_Nuts_BD_Status__c</fullName>
        <label>Edible_Nuts_BD_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approached</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edible_Nuts_Owner_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Edible Nuts Owner Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edible_Nuts_Primary_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Edible Nuts Primary Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emailaddress__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Emailaddress</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inco_Terms_Cocoa__c</fullName>
        <label>Inco Terms (Cocoa)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Inco_Terms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inco_Terms__c</fullName>
        <label>Inco Terms</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CFR</fullName>
                    <label>CFR - Costs and freight</label>
                </value>
                <value>
                    <fullName>CIF</fullName>
                    <label>CIF - Costs, insurance &amp; freight</label>
                </value>
                <value>
                    <fullName>CIP</fullName>
                    <label>CIP - Carriage and insurance paid</label>
                </value>
                <value>
                    <fullName>CPT</fullName>
                    <label>CPT - Carriage paid to</label>
                </value>
                <value>
                    <fullName>DAP</fullName>
                    <label>DAP - Delivered At Place</label>
                </value>
                <value>
                    <fullName>DDP</fullName>
                    <label>DDP - Delivered Duty Paid</label>
                </value>
                <value>
                    <fullName>DPU</fullName>
                    <label>DPU - Delivered At Place Unloaded</label>
                </value>
                <value>
                    <fullName>EXW</fullName>
                    <label>EXW - Ex Works</label>
                </value>
                <value>
                    <fullName>FAS</fullName>
                    <label>FAS - Free Along Sideship</label>
                </value>
                <value>
                    <fullName>FCA</fullName>
                    <label>FCA - Free Carrier</label>
                </value>
                <value>
                    <fullName>FOB</fullName>
                    <label>FOB - Free On Board</label>
                </value>
                <value>
                    <fullName>Instore</fullName>
                </value>
                <value>
                    <fullName>CNF</fullName>
                    <isActive>false</isActive>
                    <label>CNF</label>
                </value>
                <value>
                    <fullName>DAT</fullName>
                    <isActive>false</isActive>
                    <label>DAT</label>
                </value>
                <value>
                    <fullName>DDU</fullName>
                    <isActive>false</isActive>
                    <label>DDU</label>
                </value>
                <value>
                    <fullName>DES</fullName>
                    <isActive>false</isActive>
                    <label>DES</label>
                </value>
                <value>
                    <fullName>FOR</fullName>
                    <isActive>false</isActive>
                    <label>FOR</label>
                </value>
                <value>
                    <fullName>FOT</fullName>
                    <isActive>false</isActive>
                    <label>FOT</label>
                </value>
                <value>
                    <fullName>UN</fullName>
                    <isActive>false</isActive>
                    <label>UN</label>
                </value>
                <value>
                    <fullName>Z05</fullName>
                    <isActive>false</isActive>
                    <label>Z05</label>
                </value>
                <value>
                    <fullName>Z06</fullName>
                    <isActive>false</isActive>
                    <label>Z06</label>
                </value>
                <value>
                    <fullName>Z09</fullName>
                    <isActive>false</isActive>
                    <label>Z09</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indirect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indirect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Employees__c</fullName>
        <label>No. of Employees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>No_of_Employees</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pardot_Region__c</fullName>
        <label>Pardot Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZU13 - Net 60 days - Date of Invoice</fullName>
                </value>
                <value>
                    <fullName>Z070 - 2% 15 days, 60 days net</fullName>
                </value>
                <value>
                    <fullName>ZU10 - Net 30 days - Date of Invoice</fullName>
                </value>
                <value>
                    <fullName>ZU14 - Net 90 days - Date of Invoice</fullName>
                </value>
                <value>
                    <fullName>ZU17 - Payment in Advance,Prepayment</fullName>
                </value>
                <value>
                    <fullName>ZU07 - Net 15 days - Date of Invoice</fullName>
                </value>
                <value>
                    <fullName>ZS87 - CAD at Sight In Trust@120 day-98%-2% Pay on req</fullName>
                </value>
                <value>
                    <fullName>ZU12 - Net 45 days - Date of Invoice</fullName>
                </value>
                <value>
                    <fullName>USBM - 2% 10 NET 45</fullName>
                </value>
                <value>
                    <fullName>US0D - 1% 10 NET 60</fullName>
                </value>
                <value>
                    <fullName>ZU04 - Net 7 days - Date of Invoice</fullName>
                    <default>true</default>
                    <label>ZU04 - Net 7 days - Date of Invoice</label>
                </value>
                <value>
                    <fullName>ZS96 - CAD at Sight In Trust @ 75 day - 100%</fullName>
                </value>
                <value>
                    <fullName>USAE - Net due in 65 days</fullName>
                </value>
                <value>
                    <fullName>ZU11 - Net 40 days - Date of Invoice</fullName>
                </value>
                <value>
                    <fullName>SG06 - Letter of credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority_Customer__c</fullName>
        <label>Priority Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hunt &amp; Grow</fullName>
                </value>
                <value>
                    <fullName>Invest</fullName>
                </value>
                <value>
                    <fullName>Maintain</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <description>To Identify the account region</description>
        <label>Regions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMENA</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                    <isActive>false</isActive>
                    <label>Africa</label>
                </value>
                <value>
                    <fullName>Americas</fullName>
                    <isActive>false</isActive>
                    <label>Americas</label>
                </value>
                <value>
                    <fullName>Europe</fullName>
                    <isActive>false</isActive>
                    <label>Europe</label>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                    <isActive>false</isActive>
                    <label>Latin America</label>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                    <isActive>false</isActive>
                    <label>Middle East</label>
                </value>
                <value>
                    <fullName>North America</fullName>
                    <isActive>false</isActive>
                    <label>North America</label>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                    <isActive>false</isActive>
                    <label>Oceania</label>
                </value>
                <value>
                    <fullName>South America</fullName>
                    <isActive>false</isActive>
                    <label>South America</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Account_Activation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Account activated in SAP</inlineHelpText>
        <label>SAP Account Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Account_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SAP Account ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SG41 - 01 - 03</fullName>
                </value>
                <value>
                    <fullName>SG41 - 02 - 03</fullName>
                </value>
                <value>
                    <fullName>SG41 - 07 - 03</fullName>
                </value>
                <value>
                    <fullName>SG42 - 01 - 03</fullName>
                </value>
                <value>
                    <fullName>SG42 - 02 - 03</fullName>
                </value>
                <value>
                    <fullName>SG42 - 07 - 03</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment_FoodServices__c</fullName>
        <label>Segment_FS</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spice_Active_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>First Closing Win Opportunity Date</inlineHelpText>
        <label>Spices Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spice_BD_Status__c</fullName>
        <label>Spices_BD_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approached</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spice_Owner_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Spices Owner Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spices_Primary_User__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Spices Primary User</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment_Cocoa__c</fullName>
        <label>Terms of Payment (Cocoa)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Terms_of_Payment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Account__c</fullName>
        <label>Type of Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Co-packer</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Co-manufacturer</fullName>
                </value>
                <value>
                    <fullName>Packaging supplier</fullName>
                </value>
                <value>
                    <fullName>Raw material supplier</fullName>
                </value>
                <value>
                    <fullName>Service provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vietnam_Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vietnam_Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>E-commerce</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Convenience Stores</fullName>
                </value>
                <value>
                    <fullName>Supermarkets</fullName>
                </value>
                <value>
                    <fullName>Hypermarkets</fullName>
                </value>
                <value>
                    <fullName>Discounters</fullName>
                </value>
                <value>
                    <fullName>Bulk Retailers</fullName>
                </value>
                <value>
                    <fullName>Gourmet/ Specialty</fullName>
                </value>
                <value>
                    <fullName>Pharmacy/ Health &amp; Beauty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vietnam_Annual_Profit__c</fullName>
        <label>Annual Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vietnam_Tax_ID__c</fullName>
        <label>Tax ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofi_Region__c</fullName>
        <label>ofi Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMENA</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ofi_Sub_Region_2__c</fullName>
        <label>ofi Sub Region 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia and New Zealand</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>Central Asia</fullName>
                </value>
                <value>
                    <fullName>Channel Islands</fullName>
                </value>
                <value>
                    <fullName>East Africa</fullName>
                </value>
                <value>
                    <fullName>East Asia</fullName>
                </value>
                <value>
                    <fullName>East Europe</fullName>
                </value>
                <value>
                    <fullName>Melanesia</fullName>
                </value>
                <value>
                    <fullName>Micronesia</fullName>
                </value>
                <value>
                    <fullName>Middle Africa</fullName>
                </value>
                <value>
                    <fullName>North Africa</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>North Europe</fullName>
                </value>
                <value>
                    <fullName>Polynesia</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>South Asia</fullName>
                </value>
                <value>
                    <fullName>South-East Asia</fullName>
                </value>
                <value>
                    <fullName>South Europe</fullName>
                </value>
                <value>
                    <fullName>West Africa</fullName>
                </value>
                <value>
                    <fullName>West Asia</fullName>
                </value>
                <value>
                    <fullName>West Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ofi_Sub_Region__c</fullName>
        <label>ofi Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Oceania</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>